tests/paczka1/fuzzy1/85750280.err
Error in line 8: qfE S226 73,8
Error in line 4: urS1e5LIFJy S442 73,9
Error in line 12: b8J S226 37,1
Error in line 39: S7 S966 21,8
